2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Clean up
	  some code to make parser/generator more readable and avoid duplication

2007-01-29  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <technique_common>, <accessor> and <param> tags.

2007-01-26  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <polygon>, <polylist>, <ph> and <vcount> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <linestrips> tag and fix up the <lines> tag generation

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <vertices>, <input>, <lines> and <p> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <source> and <(IDREF|Name|bool|float|int)_array> tags.

2007-01-25  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py, dom.py: Handle
	  the <library_geometries>, <geometry> and <mesh> tags.

2007-01-22  Kai Blin  <kai.blin@gmail.com>
	* collada_plugin/generator.py, collada_plugin/generator.py: Cheat around
	  unhandled nodes so we at least reexport complete, valid collada xml.

2007-01-22  Kai Blin  <kai.blin@gmail.com>
	* plugins/collada.py: Use Generator to generate XML files
	* plugins/collada_plugin/generator.py: Generator for Collada XML files.
	* plugins/collada_plugin/parser.py: Parse <asset> tags, including all
	  children

2007-01-22  Kai Blin  <kai.blin@gmail.com>
	* __init__.py: Added to make plunger a module.
	* core.py: Core functionality of plunger seperated from the TUI now.
	* dom.py: New in memory model. Still close to the Collada format.
	* model.py: Not needed anymore, deleting.